        PR 9766         * dlltool.c (xlate): When strip text after the @ sign, look for         the last one not the first one.